syntax = "proto3";
option go_package = "github.com/daiwanwei/go-api-protocols";

service UserService {
  rpc FindAllUser (FindAllUserRequest) returns (UserListResponse);
  rpc FindUser (FindUserRequest) returns (UserResponse);
}

message FindAllUserRequest {
}

message FindUserRequest {
  string id = 1;
}


message UserListResponse {
  repeated User users = 1;
}

message UserResponse {
  User user = 1;
}

message User{
  string userId = 1;
  string userName = 2;
  string email = 3;
  string password = 4;
}

